# plotly_light

./: README.md  pyproject.toml  setup.cfg
doc/: Reference.html  Reference.ipynb
src/: __init__.py  _bar.py  _box.py  _colors.py  _config.py  _crawl.py  _figure.py  _histogram.py  _image.py  _layout.py  _line.py  _rectangle.py  _renderer.py  _scatter.py  _show.py  _theme.py  _type.py  _venn.py  default.py  histogram.py  layout.py  line.py  scatter.py  show.py  show_plot.py
src/plotly_light/: __init__.py  _bar.py  _box.py  _config.py  _const.py  _crawl.py  _histogram.py  _image.py  _layout.py  _line.py  _rectangle.py  _renderer.py  _scatter.py  _show.py  _venn.py  default.py
