[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[project.urls]
Homepage = "https://github.com/yoshihikosuzuki/plotly_light"

[project]
authors = [
  {name = "Yoshihiko Suzuki", email = "yoshi.suzuki.1992@gmail.com"},
]
dependencies = [
  "plotly >= 5",
  "kaleido",
  "notebook >= 6",
  "anywidget >= 0.8",
  "numpy",
  "matplotlib",
  "matplotlib-venn",
  "ipython",
  "pandas",
  "scikit-image",
  "logzero",
]
description = "A wrapper of Plotly Python for lightweight plots"
license = {file = "LICENSE"}
name = "plotly-light"
readme = "README.md"
requires-python = ">=3.7"
version = "2.0.1"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
