[metadata]
name = plotly-light
version = 1.0.2
author = Yoshihiko Suzuki
author_email = ys.neoteny@gmail.com
url = https://github.com/yoshihikosuzuki/plotly_light
description = A wrapper of Plotly Python for lightweight plots
long_description = file: README.md
long_description_content_type = text/markdown


[options]
zip_safe = False
python_requires = >= 3.7
package_dir =
  plotly_light = src
packages =
  plotly_light
install_requires =
  ipython == 7.24.1
  plotly == 5.0.0
  matplotlib == 3.4.2
  matplotlib-venn == 0.11.6
  scikit-image == 0.18.2
  numpy == 1.21.0
  ipynb-path == 0.1.4
  uuid == 1.30
