[metadata]
name = plotly-light
version = 1.0.3
author = Yoshihiko Suzuki
author_email = ys.neoteny@gmail.com
url = https://github.com/yoshihikosuzuki/plotly_light
description = A wrapper of Plotly Python for lightweight plots
long_description = file: README.md
long_description_content_type = text/markdown


[options]
zip_safe = False
python_requires = >= 3.7
package_dir =
  plotly_light = src
packages =
  plotly_light
install_requires =
  plotly == 5.8.0
  numpy == 1.21.6
  matplotlib == 3.5.2
  matplotlib-venn == 0.11.7
  ipython == 7.33.0
  pandas == 1.3.5
  scikit-image == 0.19.2
  logzero == 1.7.0
  ipynb-path == 0.1.4
