[metadata]
name = plotly-light
version = 1.0.6
author = Yoshihiko Suzuki
author_email = ys.neoteny@gmail.com
url = https://github.com/yoshihikosuzuki/plotly_light
description = A wrapper of Plotly Python for lightweight plots
long_description = file: README.md
long_description_content_type = text/markdown


[options]
zip_safe = False
python_requires = >= 3.7
package_dir =
  plotly_light = src
packages =
  plotly_light
install_requires =
  plotly ~= 5.0
  numpy
  matplotlib
  matplotlib-venn
  ipython
  pandas
  scikit-image
  logzero
  ipynb-path
